:iphone: [Navbar] Show link item and redirect

--- a/src/components/Layout/NavBar/index.css
+++ b/src/components/Layout/NavBar/index.css
@@ -9,6 +9,7 @@
 }
 .nav-hamburger-toggle {
   display: none;
+  flex-flow: column;
   animation: appear-toggle-top 0.7s ease;
   position: absolute;
   top: 0;
@@ -17,6 +18,20 @@
   width: 100vw;
   background-color: #fff;
   z-index: -1;
+  justify-content: center;
+}
+.nav-hamburger-toggle-menu {
+  max-height: calc(100vh - 70px);
+}
+.nav-hamburger-toggle-item {
+  margin-bottom: 40px;
+  text-align: center;
+  height: 40px;
+}
+.nav-hamburger-toggle-item p {
+  font-size: 25px;
+  font-weight: 300;
+  color: #7f7f7f !important;
 }
 .nav-hamburger-toggle-show {
   display: flex !important;
