--- a/src/components/Graph8/index.css
+++ b/src/components/Graph8/index.css
@@ -15,6 +15,7 @@
 
 .graph8-content {
   text-align: center;
+  padding: 0 0 0 13px !important;
 }
 
 .graph8-content-text {
@@ -35,6 +36,7 @@
 }
 
 .graph8-summary {
+  margin-top: 30px;
   width: 100%;
   text-align: center;
 }
