:iphone: [Responsive] Partners list item

--- a/src/components/PartnersList/index.css
+++ b/src/components/PartnersList/index.css
@@ -22,7 +22,7 @@
   border-radius: 10px;
   cursor: pointer;
   width: 100%;
-  max-height: 145px;
+  /* max-height: 145px; */
 }
 
 .partners-images {
@@ -43,6 +43,10 @@
   font-size: 15px;
   font-weight: 400;
   color: #7f7f7f;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
 .placeholder-content-second {
@@ -53,6 +57,10 @@
   font-size: 15px;
   font-weight: 400;
   color: #7f7f7f;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
 .partners-images:hover .placeholder-content {
@@ -143,4 +151,7 @@
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+@media only screen and (max-width: 576px) {
 }
