--- a/src/components/Layout/NavBar/index.css
+++ b/src/components/Layout/NavBar/index.css
@@ -6,6 +6,7 @@
   width: 70px;
   height: auto;
   margin-left: auto;
+  animation: appear-right ease 1s;
 }
 .nav-hamburger-toggle {
   display: none;
