Add regend to true and fix height

--- a/src/components/Graph4/index.css
+++ b/src/components/Graph4/index.css
@@ -28,9 +28,9 @@
 }
 
 .graph-4-section {
-  position: relative;
-  width: 450px;
-  height: 300px;
+  /* position: relative; */
+  /* width: 450px; */
+  /* height: 300px; */
 }
 
 .graph-4-desc {
