--- a/src/components/Organization/index.css
+++ b/src/components/Organization/index.css
@@ -41,3 +41,14 @@
 .org-image {
   width: 100%;
 }
+
+@media only screen and (max-width: 998px) {
+  .org-content-section {
+    margin-top: 45px;
+  }
+
+  .org-content-desc {
+    padding: 10px;
+    text-align: center;
+  }
+}
