--- a/src/components/PartnersList/index.css
+++ b/src/components/PartnersList/index.css
@@ -22,7 +22,7 @@
   border-radius: 10px;
   cursor: pointer;
   width: 100%;
-  /* max-height: 145px; */
+  max-height: 145px;
 }
 
 .partners-images {
@@ -40,8 +40,8 @@
   transition: opacity 1s ease-in-out;
   padding: 0px 50% 0 15px;
   width: 100%;
-  font-size: 15px;
-  font-weight: 400;
+  font-size: 1rem;
+  font-weight: 300;
   color: #7f7f7f;
   display: flex;
   flex-direction: column;
@@ -54,8 +54,8 @@
   opacity: 0;
   padding: 0px 50% 0 15px;
   width: 100%;
-  font-size: 15px;
-  font-weight: 400;
+  font-size: 1rem;
+  font-weight: 300;
   color: #7f7f7f;
   display: flex;
   flex-direction: column;
