--- a/src/pages/partners/index.css
+++ b/src/pages/partners/index.css
@@ -59,3 +59,18 @@
 .search-box-button>button:hover {
   background-color: #a87cd4 !important;
 }
+
+@media only screen and (max-width: 576px) {
+  .search-box-input {
+    height: 40px !important;
+    border-top-left-radius: 5px !important;
+    border-bottom-left-radius: 5px !important;
+    font-size: 16px !important;
+    padding: 5px 15px !important;
+  }
+  .search-box-button>button {
+    border-top-right-radius: 5px !important;
+    border-bottom-right-radius: 5px !important;
+
+  }
+}
