--- a/src/components/PartnersTable/index.css
+++ b/src/components/PartnersTable/index.css
@@ -45,7 +45,7 @@
   align-items: center;
   background-color: #fff;
   margin-top: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   padding: 0 !important;
 }
 .partner-table-container-mobile {
@@ -113,5 +113,10 @@
   }
   .partner-table-container-mobile-maintype {
     display: block;
+  }
+}
+@media only screen and (min-width: 577px) {
+  .partner-table-container-mobile-subtype {
+    display: none !important;
   }
 }
