--- a/src/components/partner/PartnerDetails/index.css
+++ b/src/components/partner/PartnerDetails/index.css
@@ -34,6 +34,7 @@
 
 .patner-detail-animation-2 {
   animation: appear-top 0.7s ease-in-out;
+  font-weight: 600 !important;
 }
 
 .partner-details-header {
