--- a/src/components/PageLayout/index.css
+++ b/src/components/PageLayout/index.css
@@ -14,7 +14,7 @@ body {
   height: 100%;
   color: #7f7f7f !important;
   max-width: 100vw !important;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 .font-th {
