--- a/src/pages/graph/index.css
+++ b/src/pages/graph/index.css
@@ -52,3 +52,10 @@
   border-radius: 50%;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 767px) {
+  .graph-page > div > div{
+    overflow: hidden !important;
+    max-width: 100vw !important;
+  }
+}
