--- a/src/components/Graph4/index.css
+++ b/src/components/Graph4/index.css
@@ -44,3 +44,8 @@
     padding: 10px 10px !important;
   }
 }
+@media only screen and (max-width: 1200px) {
+  .graph4-content-section {
+    padding-top: 0px !important;
+  }
+}
