--- a/src/components/Graph10/index.css
+++ b/src/components/Graph10/index.css
@@ -54,3 +54,9 @@
   padding-bottom: 5px !important;
   font-weight: 300 !important;
 }
+
+@media only screen and (max-width: 576px) {
+  .graph10-graph-page {
+    margin-top: 20px;
+  }
+}
