--- a/src/components/Graph9/index.css
+++ b/src/components/Graph9/index.css
@@ -14,7 +14,7 @@
 }
 
 .graph9-content {
-  margin-top: 30px;
+  margin-top: 60px;
   text-align: center;
 }
 
@@ -30,8 +30,9 @@
 }
 
 .graph9-pie {
-  width: 500px;
-  height: 300px;
+  margin-top: 20px;
+  /* width: 500px; */
+  /* height: 300px; */
 }
 
 .graph9-content-section {
@@ -55,16 +56,21 @@
 
 @media only screen and (max-width: 1199px) {
   .graph9-content {
-    margin-top: 10px;
+    margin-top: 50px;
   }
 }
 
 @media only screen and (max-width: 991px) {
   .graph9-pie {
-    margin-top: 20px;
+    margin-top: 40px;
   }
 
   .graph9-content {
     margin-top: 10px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .graph9-pie {
+    margin-top: 40px;
   }
 }
